Bug 442978 - Button to configure Breeze window decoration is greyed out
Summary: Button to configure Breeze window decoration is greyed out
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: git-master
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-26 12:12 UTC by Patrick Silva
Modified: 2021-09-28 23:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
screenshot (141.73 KB, image/png)
2021-09-26 12:12 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-09-26 12:12:36 UTC
STEPS TO REPRODUCE
1. open Window Decorations KCM
2. 
3. 

OBSERVED RESULT
Please see the greyed out button highlighted in red in the attached screenshot.

EXPECTED RESULT
we are able to configure Breeze win decoration

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Patrick Silva 2021-09-26 12:12:58 UTC
Created attachment 141920 [details]
screenshot
Comment 2 Nate Graham 2021-09-27 20:02:46 UTC
Possibly related to the fix for Bug 440786, maybe?

In any event, cannot reproduce.
Comment 3 Nate Graham 2021-09-28 13:57:04 UTC
Oh, I was looking at the widget style and not the decoration style. Can reproduce.

Patrick, do you see this in the Plasma 5.23 beta too?
Comment 4 Nate Graham 2021-09-28 14:07:38 UTC
It only seems to affect Breeze, not other themes. So I bisected Breeze back to February and didn't come up with anything; trying to KWin now.
Comment 5 Nate Graham 2021-09-28 15:09:06 UTC
Bisected to this KWin commit:

commit 08d3ceb024ff00d48ef8ffd5587c61ce1c5e06eb
Author: Alexander Lohnau <alexander.lohnau@gmx.de>
Date:   Mon Aug 23 19:39:17 2021 +0200

    Port to new KDecoration2::DecorationThemeProvider class
    
    By supporting all the required attributes in the DecorationThemeMetaData class
    the custom struct can be dropped.
    
    Task: https://phabricator.kde.org/T14744

 src/kcmkwin/kwindecoration/decorationmodel.cpp   | 70 +++++++++---------------
 src/kcmkwin/kwindecoration/decorationmodel.h     | 10 +---
 src/plugins/kdecorations/aurorae/src/aurorae.cpp | 33 +++++++----
 src/plugins/kdecorations/aurorae/src/aurorae.h   | 19 ++++---
 4 files changed, 59 insertions(+), 73 deletions(-)


Which means it's in the beta.

Alexander, could you take a look? Thanks!
Comment 6 Patrick Silva 2021-09-28 15:17:02 UTC
(In reply to Nate Graham from comment #3) 
> Patrick, do you see this in the Plasma 5.23 beta too?
I'm unable to reproduce on Arch Linux running Plasma 5.23 beta.
Comment 7 Bug Janitor Service 2021-09-28 18:08:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1471
Comment 8 Nate Graham 2021-09-28 23:12:29 UTC
Git commit 1022ce0036a5e3b77bc274204720d1583b47916e by Nate Graham, on behalf of Alexander Lohnau.
Committed on 28/09/2021 at 23:08.
Pushed by ngraham into branch 'master'.

Fix condition for making themes configurable

KPluginMetaData::findPlugins only returns valid json metdata, the previous
check was accidentally kept for the condition that the plugin provides a theme engine.
FIXED-IN: master

M  +3    -3    src/kcmkwin/kwindecoration/decorationmodel.cpp

https://invent.kde.org/plasma/kwin/commit/1022ce0036a5e3b77bc274204720d1583b47916e